# FuelPriceCollector

./: .gitignore  Dockerfile  api-docs.json  api.py  build.sh  db.py  display.py  docker-compose.yaml  fetch.py  main.py  models.py  pyproject.toml  run.py
